# aiogram-template

./: .gitignore  LICENSE  config.example.json  pyproject.toml
alembic/: env.py
alembic/versions/: 63d4b067a2a0_added_users_table.py
app/: config.py  main.py
app/bot/controllers/: main.py
app/bot/controllers/interface/: controller.py
app/bot/filters/: __init__.py  i18n_text.py
app/bot/handlers/: main.py
app/bot/middlewares/: i18n.py  services.py  user.py
app/models/db/: __init__.py  bot_user.py  id_model.py
app/models/pydantic/: bot_user.py  id.py
app/services/: auth.py  base.py  unit_of_work.py
app/services/interface/: alchemy_uow.py  auth_service.py  base_uow.py  bot_uow.py  uow_service.py
app/services/repository/: bot_user.py  crud.py  helpers.py
app/services/repository/interface/: bot_user.py  crud.py
locales/: en.yml  ru.yml
